# termux_oxide

./: Cargo.toml  test.json
src/api/: audio.rs  battery_status.rs  brightness.rs  call.rs  camera.rs  clipboard.rs  contact_list.rs  download.rs  errors.rs  mod.rs  notification.rs  run.rs  sms_list.rs  toast.rs
src/api/dialog/: confirm.rs  mod.rs
