[package]
name = "termux-oxide"
version = "0.1.0"
description = "A Rust wrapper around Termux API."
edition = "2021"
license = "MIT"
homepage = ""
repository = ""

[lib]
crate-type = ["cdylib"]

targets = ["aarch64-linux-android"]

[dependencies]
futures = "0.3.32"
futures-lite = "2.6.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
simd-json = "0.17.0"
smol = "2.0.2"
